--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- FIM BOOTSRAP ICONS -->
 
+    <script src="menu.js" defer></script>
+
     <title>fmota-dev</title>
 </head>
 
@@ -39,6 +41,29 @@
                 <a href="#fale-comigo">
                     <button>Contato</button>
                 </a>
+            </div>
+
+            <div class="btn-abrir-menu-mobile" id="btn-menu">
+                <i class="bi bi-list"></i>
+            </div>
+
+            <div class="menu-mobile" id="menu-mobile">
+                <div class="btn-fechar">
+                    <i class="bi bi-x-lg"></i>
+                </div>
+
+                <nav>
+                    <ul>
+                        <li><a href="#inicio">Inicio</a></li>
+                        <li><a href="#formacao">Formacao</a></li>
+                        <li><a href="#projetos">Projetos</a></li>
+                        <li><a href="#contato">Fale comigo</a></li>
+                    </ul>
+                </nav>
+            </div>
+
+            <div class="overlay-menu" id="overlay-menu">
+
             </div>
         </div>
     </header>
