--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <li><a href="#inicio">Inicio</a></li>
                         <li><a href="#formacao">Formacao</a></li>
                         <li><a href="#projetos">Projetos</a></li>
-                        <li><a href="#contato">Fale comigo</a></li>
+                        <li><a href="#fale-comigo">Fale comigo</a></li>
                     </ul>
                 </nav>
             </div>
