--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <nav>
                     <ul>
                         <li><a href="#inicio">Inicio</a></li>
-                        <li><a href="#formacao">Formacao</a></li>
+                        <li><a href="#formacao">Formação</a></li>
                         <li><a href="#projetos">Projetos</a></li>
                         <li><a href="#fale-comigo">Fale comigo</a></li>
                     </ul>
