organização dos arquivos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -128,19 +128,24 @@
                     meus <span>projetos.</span>
                 </h2>
                 <div class="box-projetos">
-                    <div class="img-projeto" style="background-image: url(imgs/projeto01.png);">
+                    <div class="img-projeto" style="background-image: url(imgs/bikcraft.png);">
                         <div class="overlay">
                             <a href="https://fmota-dev.github.io/projeto-canesfit/" target="_blank">CanesFit</a>
                         </div>
                     </div>
-                    <div class="img-projeto" style="background-image: url(imgs/projeto02.png);">
+                    <div class="img-projeto" style="background-image: url(imgs/canesfit.png);">
                         <div class="overlay">
                             <a>Bikcraft</a>
                         </div>
                     </div>
-                    <div class="img-projeto" style="background-image: url(imgs/projeto03.png);">
+                    <div class="img-projeto" style="background-image: url(imgs/flexblog.png);">
                         <div class="overlay">
-                            <a href="https://fmota-dev.github.io/projeto-curriculo/" target="_blank">Curriculo Pessoal</a>
+                            <a href="https://fmota-dev.github.io/projeto-curriculo/" target="_blank">Flexblog</a>
+                        </div>
+                    </div>
+                    <div class="img-projeto" style="background-image: url(imgs/wildbeast.png);">
+                        <div class="overlay">
+                            <a href="https://fmota-dev.github.io/projeto-curriculo/" target="_blank">Wildbeast</a>
                         </div>
                     </div>
                 </div>
