--- a/index.html
+++ b/index.html
@@ -130,26 +130,31 @@
                 <div class="box-projetos">
                     <div class="img-projeto" style="background-image: url(imgs/bikcraft.png);">
                         <div class="overlay">
-                            <a href="https://fmota-dev.github.io/projeto-canesfit/" target="_blank">Bikcraft</a>
-                            <img src="./imgs/icon-link.svg" alt="">
+                            <a href="https://fmota-dev.github.io/projeto-canesfit/" target="_blank">Bikcraft
+                                <img src="./imgs/icon-link.svg" alt="">
+                            </a>
                         </div>
                     </div>
                     <div class="img-projeto" style="background-image: url(imgs/canesfit.png);">
                         <div class="overlay">
-                            <a>Canesfit</a>
-                            <img src="./imgs/icon-link.svg" alt="">
+                            <a href="https://fmota-dev.github.io/projeto-canesfit/" target="_blank">Canesfit
+                                <img src="./imgs/icon-link.svg" alt="">
+                            </a>
                         </div>
                     </div>
                     <div class="img-projeto" style="background-image: url(imgs/flexblog.png);">
                         <div class="overlay">
-                            <a href="https://fmota-dev.github.io/projeto-curriculo/" target="_blank">Flexblog</a>
-                            <img src="./imgs/icon-link.svg" alt="">
+                            <a href="https://fmota-dev.github.io/projeto-curriculo/" target="_blank">Flexblog
+                                <img src="./imgs/icon-link.svg" alt="">
+                            </a>
+
                         </div>
                     </div>
                     <div class="img-projeto" style="background-image: url(imgs/wildbeast.png);">
                         <div class="overlay">
-                            <a href="https://fmota-dev.github.io/projeto-curriculo/" target="_blank">Wildbeast</a>
-                            <img src="./imgs/icon-link.svg" alt="">
+                            <a href="https://fmota-dev.github.io/projeto-curriculo/" target="_blank">Wildbeast
+                                <img src="./imgs/icon-link.svg" alt="">
+                            </a>
                         </div>
                     </div>
                 </div>
