Ajustado nome e link dos projetos

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <div class="box-projetos">
                     <div class="img-projeto" style="background-image: url(imgs/bikcraft.png);">
                         <div class="overlay">
-                            <a href="https://fmota-dev.github.io/projeto-canesfit/" target="_blank">Bikcraft
+                            <a href="https://fmota-dev.github.io/projeto-bikcraft/" target="_blank">Bikcraft
                                 <img src="./imgs/icon-link.svg" alt="">
                             </a>
                         </div>
@@ -144,7 +144,7 @@
                     </div>
                     <div class="img-projeto" style="background-image: url(imgs/flexblog.png);">
                         <div class="overlay">
-                            <a href="https://fmota-dev.github.io/projeto-curriculo/" target="_blank">Flexblog
+                            <a href="https://fmota-dev.github.io/projeto-flexblog/" target="_blank">Flexblog
                                 <img src="./imgs/icon-link.svg" alt="">
                             </a>
 
@@ -152,7 +152,7 @@
                     </div>
                     <div class="img-projeto" style="background-image: url(imgs/wildbeast.png);">
                         <div class="overlay">
-                            <a href="https://fmota-dev.github.io/projeto-curriculo/" target="_blank">Wildbeast
+                            <a href="https://fmota-dev.github.io/projeto-wildbeast/" target="_blank">Wildbeast
                                 <img src="./imgs/icon-link.svg" alt="">
                             </a>
                         </div>
