adicionado contato do whatsapp e removido link para instagram

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <p> Estou entusiasmado em aplicar essas habilidades e conhecimentos no cenário do Desenvolvimento Web, contribuindo para projetos inovadores e desafiadores.</p>
 
                     <div class="btn-social">
-                        <a href="https://www.instagram.com/lipemsl/" target="_blank"><button><i class="bi bi-instagram"></i></button></a>
+                        <a href="https://wa.me/5584988139069" target="_blank"><button><i class="bi bi-whatsapp"></i></button></a>
                         <a href="https://www.linkedin.com/in/fmota-dev/" target="_blank"><button><i class="bi bi-linkedin"></i></button></a>
                         <a href="https://github.com/fmota-dev" target="_blank"><button><i class="bi bi-github"></i></button></a>
                     </div>
@@ -183,9 +183,15 @@
                         fale <span>comigo.</span>
                     </h2>
                     <div class="btn-social borda">
-                        <a href="https://www.instagram.com/lipemsl/" target="_blank"><button><i class="bi bi-instagram"></i></button></a>
-                        <a href="https://www.linkedin.com/in/fmota-dev/" target="_blank"><button><i class="bi bi-linkedin"></i></button></a>
-                        <a href="https://github.com/fmota-dev" target="_blank"><button><i class="bi bi-github"></i></button></a>
+                        <a href="https://wa.me/5584988139069" target="_blank">
+                            <button><i class="bi bi-whatsapp"></i></button>
+                        </a>
+                        <a href="https://www.linkedin.com/in/fmota-dev/" target="_blank">
+                            <button><i class="bi bi-linkedin"></i></button>
+                        </a>
+                        <a href="https://github.com/fmota-dev" target="_blank">
+                            <button><i class="bi bi-github"></i></button>
+                        </a>
                     </div>
                 </div>
             </div>
