refatorado classe topo do site e adicionado decorações

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
     </header>
 
     <main>
-        <section class="topo-do-site" id="#inicio">
+        <section class="inicio" id="#inicio">
             <div class="container">
-                <div class="txt-topo-site">
+                <div class="txt-inicio">
                     <h1>Muito prazer, <span>me chamo Filipe Mota.</span></h1>
 
                     <p>Atualmente, estou imerso no universo do Desenvolvimento Web, concentrando meus estudos nas áreas de front-end, back-end e Mobile. Além de me especializar em UX/UI Designer.</p>
@@ -85,7 +85,7 @@
                     </div>
                 </div>
 
-                <div class="img-topo-site">
+                <div class="img-inicio">
                     <img src="./imgs/img-principal.svg" alt="Imagem de um desenvolvedor">
                 </div>
             </div>
@@ -97,7 +97,7 @@
                     <img src="./imgs/img-sobre.svg" alt="Imagem de um desenvolvedor">
                 </div>
                 <div class="txt-formacao">
-                    <h2 class="titulo">minha <span>formação.</span></h2>
+                    <h2 class="titulo linha-detalhe">minha <span>formação.</span></h2>
 
                     <div class="card-formacao">
                         <h3>SENAC</h3>
@@ -124,7 +124,7 @@
 
         <section class="projetos" id="projetos">
             <div class="container">
-                <h2 class="titulo">
+                <h2 class="titulo linha-detalhe">
                     meus <span>projetos.</span>
                 </h2>
                 <div class="box-projetos">
@@ -179,7 +179,7 @@
                 </div>
 
                 <div class="box-fale-comigo">
-                    <h2 class="titulo">
+                    <h2 class="titulo linha-detalhe">
                         fale <span>comigo.</span>
                     </h2>
                     <div class="btn-social borda">
