--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </header>
 
     <main>
-        <section class="inicio" id="#inicio">
+        <section class="inicio" id="inicio">
             <div class="container">
                 <div class="txt-inicio">
                     <h1>Muito prazer, <span>me chamo Filipe Mota.</span></h1>
