refatorado estilos e mudanças no design

--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
             </div>
         </section>
 
-        <section class="formacao" id="formacao">
+        <section class="formacao linha-detalhe" id="formacao">
             <div class="container">
                 <div class="img-formacao">
                     <img src="./imgs/img-sobre.svg" alt="Imagem de um desenvolvedor">
                 </div>
-                <div class="txt-formacao">
-                    <h2 class="titulo linha-detalhe">minha <span>formação.</span></h2>
+                <div class="txt-formacao ">
+                    <h2 class="titulo ">minha <span>formação.</span></h2>
 
                     <div class="card-formacao">
                         <h3>SENAC</h3>
@@ -122,9 +122,9 @@
                 </div>
         </section>
 
-        <section class="projetos" id="projetos">
-            <div class="container">
-                <h2 class="titulo linha-detalhe">
+        <section class="projetos linha-detalhe" id="projetos">
+            <div class="container ">
+                <h2 class="titulo ">
                     meus <span>projetos.</span>
                 </h2>
                 <div class="box-projetos">
@@ -164,7 +164,7 @@
             </a>
         </section>
 
-        <section class="formulario" id="fale-comigo">
+        <section class="formulario linha-detalhe" id="fale-comigo">
             <div class="container">
                 <div class="txt-formulario">
                     <form action="" method="post" id="meuFormulario">
@@ -178,8 +178,8 @@
                     </form>
                 </div>
 
-                <div class="box-fale-comigo">
-                    <h2 class="titulo linha-detalhe">
+                <div class="box-fale-comigo ">
+                    <h2 class="titulo ">
                         fale <span>comigo.</span>
                     </h2>
                     <div class="btn-social borda">
