criado arquivo css com as cores do site

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="Criatividade e inovação andam lado a lado. Com uma combinação única de design 
     impactante, funcionalidade intuitiva e otimização para resultados, estou pronto para criar a presença online dos seus sonhos.">
-    <link rel="stylesheet" href="./styles/style.min.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,7 +40,7 @@
             <nav class="menu-desktop">
                 <ul>
                     <li><a href="#inicio">Inicio</a></li>
-                    <li><a href="#formacao">Formacao</a></li>
+                    <li><a href="#formacao">Formação</a></li>
                     <li><a href="#projetos">Projetos</a></li>
                 </ul>
             </nav>
