otimizado imagens e adicionado favicon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         content="Criatividade e inovação andam lado a lado. Com uma combinação única de design 
     impactante, funcionalidade intuitiva e otimização para resultados, estou pronto para criar a presença online dos seus sonhos.">
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="shortcut icon" href="imgs/img-principal.svg" type="image/svg">
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -152,21 +153,21 @@
                     meus <span>projetos.</span>
                 </h2>
                 <div class="box-projetos">
-                    <div class="img-projeto" style="background-image: url(imgs/bikcraft.png);">
+                    <div class="img-projeto" style="background-image: url(imgs/bikcraft.jpg);">
                         <div class="overlay">
                             <a href="https://fmota-dev.github.io/projeto-bikcraft/" target="_blank">Bikcraft
                                 <img src="./imgs/icon-link.svg" alt="">
                             </a>
                         </div>
                     </div>
-                    <div class="img-projeto" style="background-image: url(imgs/canesfit.png);">
+                    <div class="img-projeto" style="background-image: url(imgs/canesfit.jpg);">
                         <div class="overlay">
                             <a href="https://fmota-dev.github.io/projeto-canesfit/" target="_blank">Canesfit
                                 <img src="./imgs/icon-link.svg" alt="">
                             </a>
                         </div>
                     </div>
-                    <div class="img-projeto" style="background-image: url(imgs/flexblog.png);">
+                    <div class="img-projeto" style="background-image: url(imgs/flexblog.jpg);">
                         <div class="overlay">
                             <a href="https://fmota-dev.github.io/projeto-flexblog/" target="_blank">Flexblog
                                 <img src="./imgs/icon-link.svg" alt="">
@@ -174,7 +175,7 @@
 
                         </div>
                     </div>
-                    <div class="img-projeto" style="background-image: url(imgs/wildbeast.png);">
+                    <div class="img-projeto" style="background-image: url(imgs/wildbeast.jpg);">
                         <div class="overlay">
                             <a href="https://fmota-dev.github.io/projeto-wildbeast/" target="_blank">Wildbeast
                                 <img src="./imgs/icon-link.svg" alt="">
