refeito formulario de contato

--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Criatividade e inovação andam lado a lado. Com uma combinação única de design 
+    <meta name="description" content="Criatividade e inovação andam lado a lado. Com uma combinação única de design 
     impactante, funcionalidade intuitiva e otimização para resultados, estou pronto para criar a presença online dos seus sonhos.">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="shortcut icon" href="imgs/img-principal.svg" type="image/svg">
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,600&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,600&display=swap" rel="stylesheet">
     <!-- FIM GOOGLE FONTS -->
 
     <!-- BOOTSRAP ICONS -->
@@ -191,42 +189,32 @@
 
         <section class="formulario linha-detalhe" id="fale-comigo">
             <div class="container">
+                <h2 class="titulo ">
+                    fale <span>comigo.</span>
+                </h2>
+
                 <div class="txt-formulario">
                     <form action="" method="post" id="meuFormulario">
-                        <input type="text" name="nome" id="nome" placeholder="Seu nome:" required>
-                        <input type="email" name="email" id="email" placeholder="Seu e-mail:" required>
-                        <input type="tel" name="numero" id="numero" placeholder="Seu número:">
-                        <textarea name="mensagem" id="mensagem" cols="30" rows="10" placeholder="Sua mensagem"
-                            required></textarea>
-                        <div class="btn-enviar">
-                            <input type="submit" value="ENVIAR">
+                        <label for="mensagem">Do que você precisa minha autarquia? </label>
+                        <textarea name="mensagem" id="mensagem" cols="30" rows="10" placeholder="Sua mensagem" required></textarea>
+                        <div class="btn-container">
+                            <button id="enviar-mensagem" type="submit">ENVIAR NO WHATSAPP</button>
+                            <div class="btn-social">
+                                <a href="https://www.linkedin.com/in/fmota-dev/" target="_blank">
+                                    <button type="button" aria-label="Botão Linkedin">
+                                        <i class="bi bi-linkedin"></i>
+                                    </button>
+                                </a>
+                                <a href="https://github.com/fmota-dev" target="_blank">
+                                    <button type="button" aria-label="Botão GitHub">
+                                        <i class="bi bi-github"></i>
+                                    </button>
+                                </a>
+                            </div>
                         </div>
                     </form>
                 </div>
 
-                <div class="box-fale-comigo ">
-                    <h2 class="titulo ">
-                        fale <span>comigo.</span>
-                    </h2>
-                    <div class="btn-social borda">
-                        <a href="https://wa.me/5584988139069" target="_blank">
-                            <button aria-label="Botão WhatsApp">
-                                <i class="bi bi-whatsapp"></i>
-                            </button>
-                        </a>
-                        <a href="https://www.linkedin.com/in/fmota-dev/" target="_blank">
-                            <button aria-label="Botão Linkedin">
-                                <i class="bi bi-linkedin"></i>
-                            </button>
-                        </a>
-                        <a href="https://github.com/fmota-dev" target="_blank">
-                            <button aria-label="Botão GitHub">
-                                <i class="bi bi-github"></i>
-                            </button>
-                        </a>
-                    </div>
-                </div>
-            </div>
         </section>
 
     </main>
