ajustado o metodo do envio do forms

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 </h2>
 
                 <div class="txt-formulario">
-                    <form action="" method="post" id="meuFormulario">
+                    <form action="" method="get" id="meuFormulario">
                         <label for="mensagem">Do que você precisa minha autarquia? </label>
                         <textarea name="mensagem" id="mensagem" cols="30" rows="10" placeholder="Sua mensagem" required></textarea>
                         <div class="btn-container">
