--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
 
                 <div class="txt-formulario">
                     <form action="" method="get" id="meuFormulario">
-                        <label for="mensagem">Do que você precisa minha autarquia? </label>
+                        <label for="mensagem">Do que você precisa, <span>minha autarquia</span>? </label>
                         <textarea name="mensagem" id="mensagem" cols="30" rows="10" placeholder="Sua mensagem" required></textarea>
-                        <div class="btn-container">
-                            <button id="enviar-mensagem" type="submit">ENVIAR NO WHATSAPP</button>
+                        <div class="btn-container ">
+                            <button id="enviar-mensagem" class="btn-contato" type="submit">ENVIAR NO WHATSAPP</button>
                             <div class="btn-social">
                                 <a href="https://www.linkedin.com/in/fmota-dev/" target="_blank">
                                     <button type="button" aria-label="Botão Linkedin">
