--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <meta name="description" content="Criatividade e inovação andam lado a lado. Com uma combinação única de design 
     impactante, funcionalidade intuitiva e otimização para resultados, estou pronto para criar a presença online dos seus sonhos.">
-    <link rel="stylesheet" href="./styles/style.css">
+    <meta name="keywords" content="Desenvolvimento Web, Front-end, Back-end, Mobile, UX/UI Design, HTML, CSS, JavaScript, React, Node.js, PHP, MySQL, MongoDB, Figma, Adobe XD, Photoshop, Illustrator">
+    <meta name="author" content="Filipe Mota - fmota-dev">
+
+    <link rel="stylesheet" href="./styles/style.min.css">
     <link rel="shortcut icon" href="imgs/img-principal.svg" type="image/svg">
-    <!-- GOOGLE FONTS -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,600&display=swap" rel="stylesheet">
-    <!-- FIM GOOGLE FONTS -->
 
-    <!-- BOOTSRAP ICONS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <!-- FIM BOOTSRAP ICONS -->
 
-    <script src="script.js" defer></script>
+    <script src="js/menu-mobile.js" defer></script>
+    <script src="js/voltar-ao-topo.js" defer></script>
+    <script src="js/enviar-mensagem.js" defer></script>
 
     <title>fmota-dev</title>
 </head>
