fix: corrigido link da logo

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <a href="fmota.com.br">
+                <a href="">
                     <img src="./imgs/logo.svg" alt="Logo fmota-dev">
                 </a>
             </div>
