alterar title da pagina

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src="js/menu-mobile.js" defer></script>
     <script src="js/voltar-ao-topo.js" defer></script>
     <script src="js/enviar-mensagem.js" defer></script>
-    <title>fmota-dev</title>
+    <title>fmota.dev</title>
 </head>
 
 <body>
