--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Desenvolvimento Web, Front-end, Back-end, Mobile, UX/UI Design, HTML, CSS, JavaScript, React, Node.js, PHP, MySQL, MongoDB, Figma, Adobe XD, Photoshop, Illustrator">
     <meta name="author" content="Filipe Mota - fmota-dev">
 
-    <link rel="stylesheet" href="./assets/css/style.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="shortcut icon" href="imgs/img-principal.svg" type="image/svg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -117,7 +117,7 @@
                 </div>
 
                 <div class="img-inicio">
-                    <img data-anime="600" src="../assets/imgs/img-principal.svg" alt="Imagem de um desenvolvedor">
+                    <img data-anime="600" src="../assets/imgs/img-principal.svg" alt="Ilustraç de um desenvolvedor">
                 </div>
             </div>
         </section>
@@ -138,6 +138,13 @@
                     </div>
 
                     <div class="card-formacao">
+                        <h3>ORIGAMID</h3>
+                        <p>HTML & CSS</p>
+                        <P>Carga horária - 46hrs</P>
+                        <span>CONCLUIDO</span>
+                    </div>
+
+                    <div class="card-formacao">
                         <h3>ROCKETSEAT</h3>
                         <p>Introdução ao desenvolvimento web</p>
                         <P>Carga horária - 40hrs</P>
@@ -146,8 +153,8 @@
 
                     <div class="card-formacao">
                         <h3>ORIGAMID</h3>
-                        <p>Curso de UX/UI Design</p>
-                        <P>Carga horária - 120hrs</P>
+                        <p>UX/UI Design Avançado</p>
+                        <P>Carga horária - 96hrs</P>
                         <span>CONCLUÍDO</span>
                     </div>
                 </div>
