:art: feat: adicionar barra de scroll personalizada

--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
     </script>
 
     <script src="./assets/js/plugins/simple-anime.js" defer></script>
-    <script src="./assets/js/main.js" defer></script>
-    <script src="./assets/js/menu-mobile.js" defer></script>
-    <script src="./assets/js/voltar-ao-topo.js" defer></script>
-    <script src="./assets/js/enviar-mensagem.js" defer></script>
+    <script src="./assets/js/script.js" defer></script>
     <title>fmota.dev</title>
 </head>
 
