:art: feat: alinhar menu nav na esquerda

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Desenvolvimento Web, Front-end, Back-end, Mobile, UX/UI Design, HTML, CSS, JavaScript, React, Node.js, PHP, MySQL, MongoDB, Figma, Adobe XD, Photoshop, Illustrator">
     <meta name="author" content="Filipe Mota - fmota-dev">
 
-    <link rel="stylesheet" href="./assets/css/style.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="shortcut icon" href="./assets/imgs/img-principal.svg" type="image/svg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,13 +47,13 @@
                     <li><a href="#formacao">Formação</a></li>
                     <li><a href="#projetos">Projetos</a></li>
                 </ul>
+                <div class="btn-contato">
+                    <a href="#fale-comigo">
+                        <button>Contato</button>
+                    </a>
+                </div>
             </nav>
 
-            <div class="btn-contato">
-                <a href="#fale-comigo">
-                    <button>Contato</button>
-                </a>
-            </div>
 
             <div class="btn-abrir-menu-mobile" id="btn-menu">
                 <i class="bi bi-list"></i>
@@ -232,7 +232,7 @@
     </main>
 
     <footer>
-        <p>© 2024 fmota-dev. All rights reserved.</p>
+        <p>© 2024 fmota.dev | All rights reserved.</p>
     </footer>
 </body>
 
