--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Desenvolvimento Web, Front-end, Back-end, Mobile, UX/UI Design, HTML, CSS, JavaScript, React, Node.js, PHP, MySQL, MongoDB, Figma, Adobe XD, Photoshop, Illustrator">
     <meta name="author" content="Filipe Mota - fmota-dev">
 
-    <link rel="stylesheet" href="./assets/css/style.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="shortcut icon" href="./assets/imgs/img-principal.svg" type="image/svg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -210,7 +210,10 @@
                         <label for="mensagem">Do que você precisa, <span>minha autarquia</span>? </label>
                         <textarea name="mensagem" id="mensagem" cols="30" rows="10" placeholder="Sua mensagem" required></textarea>
                         <div class="btn-container ">
-                            <button id="enviar-mensagem" class="btn-contato" type="submit">ENVIAR NO WHATSAPP</button>
+                            <button id="enviar-mensagem" class="btn-contato" type="submit">
+                                ENVIAR NO WHATSAPP
+                                <i class="bi bi-whatsapp"></i>
+                            </button>
                             <div class="btn-social">
                                 <a href="https://www.linkedin.com/in/fmota-dev/" target="_blank">
                                     <button type="button" aria-label="Botão Linkedin">
