:art: feat: adicionar o projeto surfnat

--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
                             </a>
                         </div>
                     </div>
-                    <div class="img-projeto" style="background-image: url(./assets/imgs/flexblog.jpg);">
+                    <div class="img-projeto" style="background-image: url(./assets/imgs/surfnat.png);">
                         <div class="overlay">
-                            <a href="https://fmota-dev.github.io/projeto-flexblog/" target="_blank">Flexblog
+                            <a href="https://fmota-dev.github.io/projeto-surfnat/" target="_blank">Surfnat
                                 <img src="./assets/imgs/icon-link.svg" alt="">
                             </a>
 
