--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
                     <div class="card-formacao">
                         <h3>SENAC</h3>
-                        <p>Curso técnico em desenvolvimento web completo</p>
+                        <p>Curso técnico em Desenvolvimento Web</p>
                         <P>Carga horária - 1000hrs</P>
                         <span>EM ANDAMENTO</span>
                     </div>
